k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cdn-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 9090
      protocol: TCP
  selector:
    app: cdn-service
